...
                color: Theme.of(context).colorScheme.primary,
              ),
            ),
          ],
        ),
        Slider(
          key: const ValueKey('blurSlider'),
          value: blurAmount,
          min: 0,
          max: _maxBlurAmount,
          divisions: 40,
          label: intensityLabel,
          semanticFormatterCallback: _intensityPercentageLabel,
...
